--- a/.github/workflows/keepalive.yml
+++ b/.github/workflows/keepalive.yml
@@ -19,6 +19,9 @@ jobs:
             });
 
             for (const workflow of workflows.data.workflows) {
+              if (workflow.name === 'Keep scheduled workflows alive' || workflow.state !== 'active') {
+                continue;
+              }
               await github.rest.actions.disableWorkflow({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
@@ -36,9 +39,12 @@ jobs:
             });
 
             for (const workflow of workflows.data.workflows) {
-                await github.rest.actions.enableWorkflow({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  workflow_id: workflow.id,
-                });
+              if (workflow.name === 'Keep scheduled workflows alive' || workflow.state === 'active') {
+                continue;
+              }
+              await github.rest.actions.enableWorkflow({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                workflow_id: workflow.id,
+              });
             }
