--- a/.github/workflows/twitch-events.yml
+++ b/.github/workflows/twitch-events.yml
@@ -9,6 +9,39 @@ jobs:
     name: Stream is online
     runs-on: ubuntu-22.04
     steps:
-      - name: Test
-        run: |
-          echo "TEST"
+      - name: test
+        run: echo "Stream is online"
+
+      # - name: Posting to Twitter @LuisDevelops
+      #   uses: LuisAlejandro/agoras-actions@1.1.3
+      #   id: twitter-post
+      #   with:
+      #     network: twitter
+      #     action: post
+      #     twitter-consumer-key: ${{ secrets.LD_TWITTER_CONSUMER_KEY }}
+      #     twitter-consumer-secret: ${{ secrets.LD_TWITTER_CONSUMER_SECRET }}
+      #     twitter-oauth-token: ${{ secrets.LD_TWITTER_OAUTH_TOKEN }}
+      #     twitter-oauth-secret: ${{ secrets.LD_TWITTER_OAUTH_SECRET }}
+      #     status-text: 'Vente que empezamos el stream https://www.twitch.tv/luisdevelops'
+      #     status-image-url-1: https://raw.githubusercontent.com/LuisAlejandro/LuisAlejandro/master/images/twitch-bg-start.png
+
+      # - name: Posting to Twitter @LuisAlejandro
+      #   uses: LuisAlejandro/agoras-actions@1.1.3
+      #   with:
+      #     network: twitter
+      #     action: post
+      #     twitter-consumer-key: ${{ secrets.LA_TWITTER_CONSUMER_KEY }}
+      #     twitter-consumer-secret: ${{ secrets.LA_TWITTER_CONSUMER_SECRET }}
+      #     twitter-oauth-token: ${{ secrets.LA_TWITTER_OAUTH_TOKEN }}
+      #     twitter-oauth-secret: ${{ secrets.LA_TWITTER_OAUTH_SECRET }}
+      #     status-text: 'https://twitter.com/LuisDevelops/status/${{ steps.twitter-post.outputs.result }}'
+
+      # - name: Posting to Facebook @LuisDevelops
+      #   uses: LuisAlejandro/agoras-actions@1.1.3
+      #   with:
+      #     network: facebook
+      #     action: post
+      #     facebook-access-token: ${{ secrets.LD_FACEBOOK_ACCESS_TOKEN }}
+      #     facebook-object-id: ${{ secrets.LD_FACEBOOK_OBJECT_ID }}
+      #     status-text: 'Vente que empezamos el stream https://www.twitch.tv/luisdevelops'
+      #     status-image-url-1: https://raw.githubusercontent.com/LuisAlejandro/LuisAlejandro/master/images/twitch-bg-start.png
