--- a/.github/workflows/keepalive.yml
+++ b/.github/workflows/keepalive.yml
@@ -20,7 +20,7 @@ jobs:
             });
 
             for (const workflow of workflows.data.workflows) {
-              if (workflow.name === 'Keep scheduled workflows alive' || workflow.state !== 'active') {
+              if (workflow.name === 'Keep scheduled workflows alive' || workflow.path === 'dynamic/dependabot/dependabot-updates' || workflow.state !== 'active') {
                 continue;
               }
               console.log(`Disabling workflow: ${workflow.name}`);
@@ -42,7 +42,7 @@ jobs:
             });
 
             for (const workflow of workflows.data.workflows) {
-              if (workflow.name === 'Keep scheduled workflows alive' || workflow.state === 'active') {
+              if (workflow.name === 'Keep scheduled workflows alive' || workflow.path === 'dynamic/dependabot/dependabot-updates' || workflow.state === 'active') {
                 continue;
               }
               console.log(`Enabling workflow: ${workflow.name}`);
